--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
         <script src="js/vendor/jquery.easing.js"></script>
         <script src="js/vendor/jquery.waypoints.js"></script>
-		<script src="js/vendor/jquery.scroller.js"></script>
+		<script src="js/jquery.scroller.js"></script>
         <script src="js/plugins.js"></script>
     </body>
 </html>
